@@ -1,4 +1,3 @@
-# $Id: Makefile.PL,v 1.1 2003/06/10 22:01:30 jeremy Exp $
 use 5.008;
 use ExtUtils::MakeMaker;
 # See lib/ExtUtils/MakeMaker.pm for details of how to influence
@@ -11,8 +10,3 @@ WriteMakefile(
       (ABSTRACT_FROM => 'Signature.pm', # retrieve abstract from module
        AUTHOR     => 'Jeremy Madea <jdm@pobox.com>') : ()),
 );
-
-# $Log: Makefile.PL,v $
-# Revision 1.1  2003/06/10 22:01:30  jeremy
-# Initial revision
-#
